# TrainDB

./: CMakeLists.txt
docs/: UXUI.md  diagrams.drawio
include/: App.hpp  Fsm.hpp  LoadingState.hpp  MainState.hpp  Train.hpp  input.hpp
include/traindb/: App.hpp  Context.hpp  Train.hpp
include/traindb/persist/: Repo.hpp  Train.hpp  TrainRepo.hpp
include/traindb/screen/: Base.hpp  Key.hpp  Loading.hpp  Main.hpp  Search.hpp
include/traindb/view/: Base.hpp  Key.hpp  Loading.hpp  Main.hpp  Search.hpp
src/: input.cpp  main.cpp
src/traindb/: Train.cpp
src/traindb/persist/: Train.cpp  TrainRepo.cpp
src/traindb/screen/: Loading.cpp  Main.cpp  Search.cpp
src/traindb/view/: Loading.cpp  Main.cpp  Search.cpp
tests/: main.cpp
